@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>dev.resteasy.grpc</groupId>
-        <artifactId>resteasy-grpc-testsuite</artifactId>
-        <version>1.0.0.Alpha3</version>
+        <artifactId>resteasy-grpc-test-bom</artifactId>
+        <version>1.0.0.Alpha6</version>
+        <relativePath />
     </parent>
     <properties>
         <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -14,19 +15,27 @@
         <!-- Provisioning properties -->
         <jboss.home>${project.build.directory}${file.separator}wildfly</jboss.home>
 
-        <!-- RESTEasy properties -->
-        <resteasy.test.feature.pack.groupId>org.jboss.resteasy</resteasy.test.feature.pack.groupId>
-        <resteasy.test.feature.pack.artifactId>galleon-feature-pack</resteasy.test.feature.pack.artifactId>
-        <resteasy.test.feature.pack.version>${version.org.jboss.resteasy}</resteasy.test.feature.pack.version>
-
         <!-- Server properties -->
         <server.test.feature.pack.groupId>org.wildfly</server.test.feature.pack.groupId>
         <server.test.feature.pack.artifactId>wildfly-ee-galleon-pack</server.test.feature.pack.artifactId>
-        <server.test.feature.pack.version>28.0.0.Final</server.test.feature.pack.version>
+        <server.test.feature.pack.version>35.0.1.Final</server.test.feature.pack.version>
+
         <!-- For grpc-bridge test -->
         <wildfly.grpc.test.feature.pack.groupId>org.wildfly.extras.grpc</wildfly.grpc.test.feature.pack.groupId>
         <wildfly.grpc.test.feature.pack.artifactId>wildfly-grpc-feature-pack</wildfly.grpc.test.feature.pack.artifactId>
-        <wildfly.grpc.test.feature.pack.version>0.1.0.Final</wildfly.grpc.test.feature.pack.version>
+        <wildfly.grpc.test.feature.pack.version>0.1.11.Final</wildfly.grpc.test.feature.pack.version>
+        <grpc.example.version>1.0.0.Alpha7-SNAPSHOT</grpc.example.version>
+        
+        <!-- other versions -->
+        <javax.annotation.version>1.3.2</javax.annotation.version>
+        <wildfly.maven.plugin.version>5.1.2.Final</wildfly.maven.plugin.version>
+        <protoc-gen-grpc-java.version>1.70.0</protoc-gen-grpc-java.version>
+        <resteasy.version>6.2.11.Final</resteasy.version>
+        
+        <version.org.jboss.arquillian>1.9.3.Final</version.org.jboss.arquillian>
+        <version.org.jboss.arquillian.jakarta>10.0.0.Final</version.org.jboss.arquillian.jakarta>
+        <version.org.jboss.shrinkwrap.resolver>3.3.3</version.org.jboss.shrinkwrap.resolver>
+        <version.org.wildfly.arquillian>5.1.0.Beta9</version.org.wildfly.arquillian>
     </properties>
     <artifactId>grpc-tests</artifactId>
     <name>RESTEasy Main testsuite: gRPC tests</name>
@@ -50,7 +59,7 @@
                     <plugin>
                         <groupId>org.wildfly.plugins</groupId>
                         <artifactId>wildfly-maven-plugin</artifactId>
-                        <version>4.1.0.Final</version>
+                        <version>${wildfly.maven.plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>server-provisioning</id>
@@ -72,11 +81,8 @@
                 </property>
             </activation>
             <properties>
-                <resteasy.test.feature.pack.groupId>org.jboss.resteasy</resteasy.test.feature.pack.groupId>
-                <resteasy.test.feature.pack.artifactId>galleon-preview-feature-pack</resteasy.test.feature.pack.artifactId>
-                <resteasy.test.feature.pack.version>${version.org.jboss.resteasy}</resteasy.test.feature.pack.version>
                 <server.test.feature.pack.groupId>org.wildfly</server.test.feature.pack.groupId>
-                <server.test.feature.pack.artifactId>wildfly-preview-feature-pack</server.test.feature.pack.artifactId>
+                <server.test.feature.pack.artifactId>wildfly-galleon-pack</server.test.feature.pack.artifactId>
                 <server.test.feature.pack.version>${version.org.wildfly}</server.test.feature.pack.version>
             </properties>
         </profile>
@@ -99,19 +105,19 @@
         <dependency>
 			<groupId>dev.resteasy.examples</groupId>
 			<artifactId>grpcToRest.example.grpc</artifactId>
-			<version>1.0.0.Final-SNAPSHOT</version>
+			<version>${grpc.example.version}</version>
 			<type>war</type>
 		</dependency>
         <dependency>
 			<groupId>dev.resteasy.examples</groupId>
 			<artifactId>grpcToRest.example.grpc</artifactId>
-			<version>1.0.0.Final-SNAPSHOT</version>
+			<version>${grpc.example.version}</version>
 			<type>jar</type>
 		</dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <version>${javax.annotation.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -142,7 +148,6 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>protoc-gen-grpc-java</artifactId>
-            <version>1.54.1</version>
             <type>pom</type>
         </dependency>
         <dependency>
@@ -166,11 +171,6 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>arquillian-utils</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
             <scope>test</scope>
         </dependency>
@@ -189,20 +189,49 @@
             <artifactId>resteasy-json-binding-provider</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>arquillian-utils</artifactId>
+            <version>${resteasy.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.wildfly.arquillian</groupId>
-            <artifactId>wildfly-arquillian-container-managed</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>failureaccess</artifactId>
+        </dependency>
+            <!-- This is required first to override the dependencies in the Arquillian BOM -->
+            <dependency>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>${version.org.jboss.shrinkwrap.resolver}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.jakarta</groupId>
+                <artifactId>arquillian-jakarta-bom</artifactId>
+                <version>${version.org.jboss.arquillian.jakarta}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-bom</artifactId>
+                <version>${version.org.wildfly.arquillian}</version>
+                <type>pom</type>
+            </dependency>
+        <dependency>
+            <groupId>org.wildfly.arquillian</groupId>
+            <artifactId>wildfly-arquillian-container-managed</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -236,13 +265,14 @@
                 <configuration>
                     <systemPropertyVariables>
                         <server.config.dir>${jboss.home}/standalone/configuration</server.config.dir>
+                        <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     </systemPropertyVariables>
+                    <argLine>--add-opens java.base/java.lang.reflect=ALL-UNNAMED -Dgrpc.example.version=${grpc.example.version}</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
-                <version>4.1.0.Final</version>
                 <configuration>
                     <jboss-home>${jboss.home}</jboss-home>
                     <provisioning-dir>${jboss.home}</provisioning-dir>
@@ -251,12 +281,6 @@
                             <groupId>${server.test.feature.pack.groupId}</groupId>
                             <artifactId>${server.test.feature.pack.artifactId}</artifactId>
                             <version>${server.test.feature.pack.version}</version>
-                        </feature-pack>
-                        <feature-pack>
-                            <groupId>${resteasy.test.feature.pack.groupId}</groupId>
-                            <artifactId>${resteasy.test.feature.pack.artifactId}</artifactId>
-                            <version>${resteasy.test.feature.pack.version}</version>
-                            <inherit-configs>false</inherit-configs>
                         </feature-pack>
                         <feature-pack>
                             <groupId>${wildfly.grpc.test.feature.pack.groupId}</groupId>
@@ -270,6 +294,10 @@
                         <layer>grpc</layer>
                         <layer>undertow</layer>
                     </layers>
+                    <galleon-options>
+                        <jboss-fork-embedded>true</jboss-fork-embedded>
+                        <stability-level>preview</stability-level>
+                    </galleon-options>
                 </configuration>
             </plugin>
         </plugins>
